--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,33 @@ h6 {
 /*--------------------------------------------------Personal */
 
 
+
+/* css niampi blur */
+.blur-background {
+  transition: 2s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  z-index: 1; /* Assurez-vous que le flou soit en dessous du contenu de la collapsible */
+}
+
+
+.hidden {
+  display: none;
+}
+
+.collapse.show + .blur-background {
+  display: block;
+}
+
+.blur-background.hidden {
+  display: none;
+}
+/* fin */
+
 .mytext-info 
 {
   font-weight: bold;
