--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,10 @@ h6 {
 }
 .information {
   position: relative;
-  background-color: #959595 ; 
-  border-radius: 50px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+  padding: 20px;
+  background-color: #eeeeee; 
+  border-radius: 30px;
   color: rgb(0, 0, 0);
-  padding: 2px;
 }
 .information :hover
 {
@@ -189,16 +187,13 @@ h6 {
   .header {
     transition: all 0.5s;
     z-index: 997;
-    height: 120px;
+    height: 160px;
     background-color: rgba(0, 0, 0); /* Opacité 74% */
-    padding-left: 20px;
     padding: 10px;
-    position: fixed;
-    top: 0;
     width: 100%;
   }
   .main-content {
-    padding-top: 120px; /* Correspond à la hauteur du header */
+    padding-top: 50px; /* Correspond à la hauteur du header */
   }
   .personalSearch
   {
