--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
   scroll-behavior: smooth;
 }
 
+.mt-8{
+  margin-top: 8rem  !important;
+}
+
 body {
   font-family:Arial, Helvetica, sans-serif ; 
   /* CSS */
@@ -25,21 +29,6 @@ body {
 a {
   color: #4154f1;
   text-decoration: none;
-}
-.list-logo{
-  font-size:50px;
-}
-.car-icon{
-  color:#E63D36;
-}
-.brand-1{
-  color: white;
-  font-weight: bolder;
-}
-
-.brand-2{
-  color: #E63D36;
-  font-weight: bolder;
 }
 
 a:hover {
@@ -59,32 +48,31 @@ h6 {
 /*--------------------------------------------------Personal */
 
 
-
-/* css niampi blur */
-.blur-background {
-  transition: 2s ease-in-out;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(10px);
-  z-index: 1; /* Assurez-vous que le flou soit en dessous du contenu de la collapsible */
+.brand-1{
+  color: white;
+  font-weight: bolder;
 }
 
+.brand-2{
+  color: #E63D36;
+  font-weight: bolder;
 
-.hidden {
-  display: none;
 }
 
-.collapse.show + .blur-background {
-  display: block;
+.info-parking
+{
+  font-size : 200% ; 
+  font-weight: bold;
+  color:#E63D36 ;
 }
-
-.blur-background.hidden {
-  display: none;
+.list-logo
+{
+  font-size: 50px;qaaaaaaaqa
 }
-/* fin */
+.car-icon
+{
+   color: #E63D36;
+}
 
 .mytext-info 
 {
@@ -94,11 +82,12 @@ h6 {
 }
 .information {
   position: relative;
-  padding: 20px;
-  background-color: #eeeeee; 
-  border-radius: 30px;
+  /* background-color: #959595 ;  */
+  /* border-radius: 50px; */
   color: rgb(0, 0, 0);
+  padding: 2px;
 }
+
 .information :hover
 {
    /* background-color: #000000;  */
@@ -116,14 +105,15 @@ h6 {
   height: 40px;
   padding: 7px;
 } 
+             
 
 .element-2 {
   padding-top: 13px; 
-  border-radius: 50px;
+  border-radius: 11px;
   height: 70px;
   padding-top: 13px; 
   background-color: #ffffff;
-  border-radius: 50px;
+  box-shadow: 1px 1px 1px 1px;
   border : none ; 
   transition: 0.5s;
 }
@@ -137,16 +127,38 @@ h6 {
   margin-top: 20px;
 }
 
-
-.button-resa
+.Title-resa
 {
- border-radius: 30px ;
- background-color: #23303b;
+  font-size: 40px;
+  font-weight: bold;
 }
-.elementinput {
+
+.button-resa 
+{
+   text-align: center;
+   padding: 5%;
+}
+.button-resa button
+{
+ 
+  /* margin-top: 20px; */
+  font-weight: bold;
   color: white;
+  /* height:40px; */
+  border-radius: 30px ;
+  background-color: #000000;
+  border: none;
+  transition: 0.5s;
+}
+
+.button-resa button:hover
+{
+    background-color: #E63D36; 
+} 
+.elementinput {
+  color: rgb(0, 0, 0);
   border-radius: 30px;
-  background-color: rgb(255, 255,  255 , 0.5);
+  background-color: rgb(220, 220,  220 , 0.8);
   border: none;
   height: 50px;
 }
@@ -164,9 +176,15 @@ h6 {
 {
   background-repeat: no-repeat;
   background-size: cover;
+  background-size: 150%;
   background-image: url(../img/resa.jpg);
-  min-height: 100dvh;
+  /* min-height: 100dvh; */
+ /*  margin-top: -10px;  */
   background-position: center;
+}
+.img-represent
+{
+    border-radius: 20px;  
 }
 
 .buttonSearche {
@@ -174,7 +192,33 @@ h6 {
   border-radius: 40px;
   background-color: #E63D36;
   border: none;
-  }
+}
+
+/* css niampi blur */
+.blur-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  z-index: 1; /* Assurez-vous que le flou soit en dessous du contenu de la collapsible */
+}
+.hidden {
+  display: none;
+}
+
+.collapse.show + .blur-background {
+  display: block;
+}
+
+.blur-background.hidden {
+  display: none;
+}
+
+/* fin */
+
+
   .place{
     color: white;
     font-weight: bold;
@@ -199,16 +243,31 @@ h6 {
     color: white;
   }
 
-  .header {
+  .headerRecherche {
     transition: all 0.5s;
     z-index: 997;
     height: 160px;
     background-color: rgba(0, 0, 0); /* Opacité 74% */
+    padding-left: 20px;
     padding: 10px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+
+  .header {
+    transition: all 0.5s;
+    z-index: 997;
+    height: 120px;
+    background-color: rgba(0, 0, 0); /* Opacité 74% */
+    padding-left: 20px;
+    padding: 10px;
+    position: fixed;
+    top: 0;
     width: 100%;
   }
   .main-content {
-    padding-top: 50px; /* Correspond à la hauteur du header */
+    padding-top: 120px; /* Correspond à la hauteur du header */
   }
   .personalSearch
   {
