--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,12 +110,15 @@ h6 {
 .element-2 {
   padding-top: 13px; 
   border-radius: 11px;
-  height: 70px;
+  min-height: 70px;
   padding-top: 13px; 
   background-color: #ffffff;
   box-shadow: 1px 1px 1px 1px;
   border : none ; 
   transition: 0.5s;
+}
+.opt-2{
+  min-height: 70px !important;
 }
 .element .element-2:hover 
 {
