--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -10,6 +10,12 @@
 .color-dark{
     color: black;
 }
+.rounded-5 {
+    border-radius: 2rem !important  ;
+}
+#box{
+    background-color: #9E9A97;
+}
 .mt-6{
     margin-top: 4rem !important;
 }
