--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -111,6 +111,11 @@ body{
     background-color: #E63E37 !important;
     cursor: pointer;
 }
+.titlePage { 
+    z-index: 1;
+    border: 1px solid black;
+    margin-top: 0;
+  }
 .numero{
     border-radius: 11px;
     width: 45.78px !important;
