--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -10,6 +10,12 @@
 .color-dark{
     color: black;
 }
+.color-red{
+    color: #E63E37;
+}
+.without-after::after{
+    background-image: none !important ;
+  }
 .mt-6{
     margin-top: 4rem !important;
 }
